# 12factor-bmi-microservice

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
_12factor_bmi_microservice/: __init__.py  dataset.py  features.py  plots.py
_12factor_bmi_microservice/backend/: __init__.py  bmi.db  main.py
_12factor_bmi_microservice/frontend/: app.py
_12factor_bmi_microservice/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/api/: endpoints.md
docs/docs/architecture/: overview.md
docs/docs/development/: contributing.md
docs/docs/getting-started/: configuration.md  installation.md  running.md
tests/: test_bmi_api.py
