[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "_12factor_bmi_microservice"
version = "0.0.1"
description = "A quick web application adhereing to 12 Factor Principles of ML Systems."
authors = [
  { name = "Pravat" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["_12factor_bmi_microservice"]
force_sort_within_sections = true


